Fixing viewpager for two covers

--- a/view/css/home.css
+++ b/view/css/home.css
@@ -341,6 +341,7 @@ a {
   #view-pager {
       display: grid;
       place-items: center;
+      grid-template-columns: repeat(2, 1fr);
       position: relative;
       top: 70px;
       width: 100%;
